--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -8,5 +8,6 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install",
-  "framework": "vite"
+  "framework": "vite",
+  "functions": {}
 }
